Fixed strikethrough having gaps between words

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.strikethrough {
+  position: relative;
+}
+.strikethrough:before {
+  position: absolute;
+  content: "";
+  left: 0;
+  top: 50%;
+  right: 0;
+  @apply border border-gray-400;
+}
